--- a/log4j/pom.xml
+++ b/log4j/pom.xml
@@ -6,24 +6,18 @@
         <artifactId>log-test</artifactId>
         <groupId>org.btlas</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>slf4j</artifactId>
+    <artifactId>log4j</artifactId>
 
     <dependencies>
-        <!-- 1.6.6-->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.6.0</version>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.21</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.5.5</version>
-        </dependency>
-
     </dependencies>
+
 </project>
