--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,40 @@
     <groupId>org.btlas</groupId>
     <artifactId>log-test</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>slf4j</module>
-        <module>log4j</module>
-    </modules>
     <packaging>pom</packaging>
+    <modules>
+        <module>log4j</module>
+        <module>logback</module>
+        <module>jul</module>
+    </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <encoding>utf-8</encoding>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.plexus</groupId>
+                        <artifactId>plexus-compiler-javac</artifactId>
+                        <version>1.8.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
