--- a/jul-java/pom.xml
+++ b/jul-java/pom.xml
@@ -6,23 +6,13 @@
         <artifactId>log-test</artifactId>
         <groupId>org.btlas</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>log4j</artifactId>
+    <artifactId>jul-java</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.btlas</groupId>
-            <artifactId>log4j-java</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.btlas</groupId>
-            <artifactId>log4j-conf</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
     </dependencies>
 
 </project>
