--- a/log4j-java/pom.xml
+++ b/log4j-java/pom.xml
@@ -10,18 +10,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>log4j</artifactId>
+    <artifactId>log4j-java</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.btlas</groupId>
-            <artifactId>log4j-java</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.btlas</groupId>
-            <artifactId>log4j-conf</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
 
