--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.btlas</groupId>
-    <artifactId>log-test</artifactId>
+    <artifactId>log-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
+        <module>log4j-conf</module>
+        <module>logback-conf</module>
+
+        <module>log4j-java</module>
+        <module>logback-java</module>
+        <module>jul-java</module>
+        <module>jcl-java</module>
+
         <module>log4j</module>
         <module>logback</module>
-        <module>jul</module>
-        <module>jcl</module>
+        <module>slf4j</module>
+        <module>slf4j-java</module>
+        <module>slf4j-binding</module>
+        <module>slf4j-bridge</module>
+
     </modules>
 
     <build>
