--- a/slf4j-binding/pom.xml
+++ b/slf4j-binding/pom.xml
@@ -3,26 +3,35 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>log-test</artifactId>
+        <artifactId>log-demo</artifactId>
         <groupId>org.btlas</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>log4j</artifactId>
+    <artifactId>slf4j-binding</artifactId>
 
     <dependencies>
         <dependency>
+            <artifactId>slf4j-java</artifactId>
             <groupId>org.btlas</groupId>
-            <artifactId>log4j-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- bound to log4j 1.2  begin-->
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-log4j12</artifactId>-->
+            <!--<version>1.7.25</version>-->
+        <!--</dependency>-->
+        <!-- bound to log4j 1.2  end-->
+
+        <!-- bound to jul  begin-->
         <dependency>
-            <groupId>org.btlas</groupId>
-            <artifactId>log4j-conf</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.25</version>
         </dependency>
+        <!-- bound to jul  end-->
     </dependencies>
 
 </project>
