--- a/log4j-conf/pom.xml
+++ b/log4j-conf/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>log-demo</artifactId>
-        <groupId>org.btlas</groupId>
+        <groupId>com.github.yanglikun</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
