--- a/log4j2-bridge/pom.xml
+++ b/log4j2-bridge/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>log-demo</artifactId>
-        <groupId>org.btlas</groupId>
+        <groupId>com.github.yanglikun</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -20,7 +20,7 @@
 
         <!-- jcl bridge need-->
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>jcl-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -32,7 +32,7 @@
 
         <!-- log4j1.x need -->
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>log4j-java</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
@@ -50,7 +50,7 @@
 
         <!-- jul need-->
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>jul-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -61,7 +61,7 @@
         </dependency>
         <!-- slf4j need -->
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>slf4j-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
