--- a/log4j2/pom.xml
+++ b/log4j2/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>log-demo</artifactId>
-        <groupId>org.btlas</groupId>
+        <groupId>com.github.yanglikun</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,19 +13,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>log4j2-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!--- 同步依赖
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>log4j2-conf</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>-->
         <!-- 异步依赖-->
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>log4j2-async-conf</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
