--- a/logback/pom.xml
+++ b/logback/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>log-demo</artifactId>
-        <groupId>org.btlas</groupId>
+        <groupId>com.github.yanglikun</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,12 +13,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>logback-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>logback-conf</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
