--- a/slf4j-binding/pom.xml
+++ b/slf4j-binding/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>log-demo</artifactId>
-        <groupId>org.btlas</groupId>
+        <groupId>com.github.yanglikun</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <artifactId>slf4j-java</artifactId>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- bound to log4j 1.2  begin-->
@@ -33,12 +33,12 @@
 
         <!-- bound to logback -->
         <!--<dependency>-->
-            <!--<groupId>org.btlas</groupId>-->
+            <!--<groupId>com.github.yanglikun</groupId>-->
             <!--<artifactId>logback-java</artifactId>-->
             <!--<version>1.0-SNAPSHOT</version>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>org.btlas</groupId>-->
+            <!--<groupId>com.github.yanglikun</groupId>-->
             <!--<artifactId>logback-conf</artifactId>-->
             <!--<version>1.0-SNAPSHOT</version>-->
         <!--</dependency>-->
