--- a/slf4j-bridge/pom.xml
+++ b/slf4j-bridge/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>log-demo</artifactId>
-        <groupId>org.btlas</groupId>
+        <groupId>com.github.yanglikun</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,7 +19,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>jcl-java</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
@@ -30,7 +30,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>log4j-java</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
@@ -41,12 +41,12 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>jul-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.btlas</groupId>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>log4j2-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
