--- a/slf4j-bridge/pom.xml
+++ b/slf4j-bridge/pom.xml
@@ -75,6 +75,14 @@
             <artifactId>log4j-to-slf4j</artifactId>
             <version>2.8.2</version>
         </dependency>
+
+        <!-- 这个会有死循环 把slf4j绑定到log4j12-->
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-log4j12</artifactId>-->
+            <!--<version>1.7.25</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
 </project>
