添加动态日志例子：log4j、log4j2、logback

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
         <module>log4j2</module>
         <module>log4j2-async-conf</module>
         <module>log4j2-bridge</module>
+        <module>dynamic-logback</module>
+        <module>dynamic-log4j2</module>
+        <module>dynamic-log4j</module>
 
     </modules>
 
