--- a/slf4j-binding/pom.xml
+++ b/slf4j-binding/pom.xml
@@ -32,11 +32,11 @@
         <!--</dependency>-->
 
         <!-- bound to logback -->
-        <!--<dependency>-->
-            <!--<groupId>com.github.yanglikun</groupId>-->
-            <!--<artifactId>logback-java</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.github.yanglikun</groupId>
+            <artifactId>logback-java</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- bound to log4j2 -->
         <!--<dependency>-->
