--- a/dynamic-logback/pom.xml
+++ b/dynamic-logback/pom.xml
@@ -18,16 +18,10 @@
             <version>1.2.3</version>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.7</version>
+            <groupId>com.github.yanglikun</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.10</version>
-        </dependency>
-
     </dependencies>
 
 </project>
