--- a/slf4j-binding/pom.xml
+++ b/slf4j-binding/pom.xml
@@ -17,39 +17,44 @@
             <groupId>com.github.yanglikun</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- bound to log4j 1.2  begin-->
-        <!--<dependency>-->
-        <!--<groupId>org.slf4j</groupId>-->
-        <!--<artifactId>slf4j-log4j12</artifactId>-->
-        <!--<version>1.7.25</version>-->
-        <!--</dependency>-->
-
-        <!-- bound to jul  begin-->
-        <!--<dependency>-->
-        <!--<groupId>org.slf4j</groupId>-->
-        <!--<artifactId>slf4j-jdk14</artifactId>-->
-        <!--<version>1.7.25</version>-->
-        <!--</dependency>-->
-
-        <!-- bound to logback -->
+        <!--bound to log4j 1.2-->
         <dependency>
-            <groupId>com.github.yanglikun</groupId>
-            <artifactId>logback-java</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
         </dependency>
+        <!--bound to jul-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.slf4j</groupId>-->
+        <!--            <artifactId>slf4j-jdk14</artifactId>-->
+        <!--            <version>1.7.32</version>-->
+        <!--        </dependency>-->
 
-        <!-- bound to log4j2 -->
-        <!--<dependency>-->
-        <!--<groupId>org.apache.logging.log4j</groupId>-->
-        <!--<artifactId>log4j-slf4j-impl</artifactId>-->
-        <!--<version>2.8.2</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.apache.logging.log4j</groupId>-->
-        <!--<artifactId>log4j-core</artifactId>-->
-        <!--<version>2.8.2</version>-->
-        <!--</dependency>-->
+        <!--bound to logback-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.yanglikun</groupId>-->
+        <!--            <artifactId>logback-java</artifactId>-->
+        <!--            <version>1.0-SNAPSHOT</version>-->
+        <!--        </dependency>-->
 
+        <!--bound to log4j2-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.logging.log4j</groupId>-->
+        <!--            <artifactId>log4j-slf4j-impl</artifactId>-->
+        <!--            <version>2.17.2</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.logging.log4j</groupId>-->
+        <!--            <artifactId>log4j-core</artifactId>-->
+        <!--            <version>2.8.2</version>-->
+        <!--        </dependency>-->
+
+        <!--bind to jcl-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.slf4j</groupId>-->
+        <!--            <artifactId>slf4j-jcl</artifactId>-->
+        <!--            <version>1.7.32</version>-->
+        <!--        </dependency>-->
     </dependencies>
 
 </project>
