--- a/slf4j-bridge/pom.xml
+++ b/slf4j-bridge/pom.xml
@@ -20,17 +20,6 @@
 
         <dependency>
             <groupId>com.github.yanglikun</groupId>
-            <artifactId>jcl-java</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>commons-logging</artifactId>
-                    <groupId>commons-logging</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.github.yanglikun</groupId>
             <artifactId>log4j-java</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
@@ -42,6 +31,18 @@
         </dependency>
         <dependency>
             <groupId>com.github.yanglikun</groupId>
+            <artifactId>jcl-java</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <!-- 这个也可以不排除，因为jcl-over-slf4j 也提供了SPI的方式 -->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <artifactId>commons-logging</artifactId>-->
+<!--                    <groupId>commons-logging</groupId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+        </dependency>
+        <dependency>
+            <groupId>com.github.yanglikun</groupId>
             <artifactId>jul-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -50,39 +51,61 @@
             <artifactId>log4j2-java</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-        <!-- jcl need-->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <!-- log4j1.x need-->
+        <!-- log4j1.x bridge-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>1.7.25</version>
+            <version>1.7.32</version>
         </dependency>
-        <!-- jul need-->
+        <!-- jul bridge-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
-            <version>1.7.25</version>
+            <version>1.7.32</version>
         </dependency>
-        <!-- log4j2 need -->
+        <!-- jcl bridge-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+        <!-- log4j2 bridge -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-to-slf4j</artifactId>
             <version>2.8.2</version>
         </dependency>
 
-        <!-- 这个会有死循环 把slf4j绑定到log4j12-->
-        <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>slf4j-log4j12</artifactId>-->
-            <!--<version>1.7.25</version>-->
-        <!--</dependency>-->
+        <!-- 冲突模拟（死循环） -->
+        <!-- 这个死循环不一定出现，如果classpath存在多个binding可能会binding到别的实现，可以在idea中调整依赖的顺序，从而影响类的加载来复现这个问题-->
+        <!-- slf4j-log4j12 和 log4j-over-slf4j 不能同时存在(死循环)-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.slf4j</groupId>-->
+        <!--            <artifactId>slf4j-log4j12</artifactId>-->
+        <!--            <version>1.7.25</version>-->
+        <!--        </dependency>-->
 
+        <!-- slf4j-jcl和jcl-over-slf4j 不能同时存在(死循环)  -->
+        <!--        <dependency>-->
+        <!--            <groupId>org.slf4j</groupId>-->
+        <!--            <artifactId>slf4j-jcl</artifactId>-->
+        <!--            <version>1.7.32</version>-->
+        <!--        </dependency>-->
+
+
+        <!--  slf4j-jdk14 和  jul-to-slf4j 不能同时存在(死循环)-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.slf4j</groupId>-->
+        <!--            <artifactId>slf4j-jdk14</artifactId>-->
+        <!--            <version>1.7.32</version>-->
+        <!--        </dependency>-->
+
+        <!--  log4j-slf4j-impl 和 log4j-to-slf4j 不能同时存在(死循环)   https://logging.apache.org/log4j/2.x/log4j-slf4j-impl/ -->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.logging.log4j</groupId>-->
+        <!--            <artifactId>log4j-slf4j-impl</artifactId>-->
+        <!--            <version>2.8.2</version>-->
+        <!--        </dependency>-->
     </dependencies>
 
 </project>
